css/blocks/forum.css
/* Overarching wrapper element for the forum page */
.forum {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin: auto;
    padding: 40px;
    max-width: 1200px;
}

/* The header containing the logo and ads */
.forum__header {
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 20px;
}

.forum__logo {
    height: 150px;
}

/* Wrapper for ads next to logo */
.forum__ads {
    display: flex;
    gap: 20px;
    width: auto;
    overflow: scroll; /* TODO: Auto-scroll */
    /* Hide scrollbars */
    -ms-overflow-style: none; /* IE, Edge */
    scrollbar-width: none; /* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.forum__ads::-webkit-scrollbar {
    display: none;
}

.forum__ad {
    border: 1px solid var(--glass-gray);
    border-radius: 10px;
    height: 150px;
}

.forum__body {
    display: flex;
    flex-wrap: wrap-reverse;
    gap: 20px;
}

.forum__threads {
    display: flex;
    flex: 3;
    flex-direction: column;
    gap: 20px;
}

